// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LabeledDivider /> renders a string as expected 1`] = `
<div
  className="ffenw9w"
>
  <Text
    bold={true}
    inline={true}
    small={true}
  >
    Lorum ipsum
  </Text>
</div>
`;

exports[`<LabeledDivider /> renders a translation node as expected 1`] = `
<div
  className="ffenw9w"
>
  <Text
    bold={true}
    inline={true}
    small={true}
  >
    <Translate
      context="Foo"
      phrase="Lorum ipsum"
    />
  </Text>
</div>
`;
